--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Sudharshan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "mongoose": "^9.1.6",
     "validator": "^13.15.26"
